variables.Variables.scala.error
Compilation error:
Variables:1: error: ';' expected but ',' found.
var pas=0,i=0
         ^Variables:5: error: '<-' expected but ')' found.
for (i<pas) backward() 
          ^Variables:7: error: illegal start of simple expression
	}
        ^